# audius-reward-manager

./: .gitignore  Cargo.toml
cli/: Cargo.toml  senders.csv
cli/src/: main.rs  utils.rs
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
program/src/state/: reward_manager.rs  sender_account.rs  verified_messages.rs
program/src/utils/: mod.rs  signs.rs
program/tests/: add_sender.rs  create_sender.rs  delete_sender.rs  transfer.rs  utils.rs  verify_transfer_signature.rs
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
tests/: add_sender.rs  create_sender.rs  delete_sender.rs  init_reward_manager.rs  tests.rs  transfer.rs  utils.rs
