[package]
name = "audius-reward-manager"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"
num_enum = "0.5.1"
solana-program = "1.7.1"
thiserror = "1.0.25"
borsh = "0.8.2"
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.7.1"
solana-sdk = "1.7.1"

[lib]
crate-type = ["cdylib", "lib"]